--- a/Compte_Rendu/Compte Rendu.tex
+++ b/Compte_Rendu/Compte Rendu.tex
@@ -82,7 +82,7 @@ Pour ce qui est du choix du jeu j'ai penser comme si ce n'était pas un projet d
 \end{figure}
 \paragraph{Attention}Les capture d'écrans ont été effectué pendant la réalisation du code, par nostalgie je les aient laissées. 
 \section{La programmation}
-Au vue de la taille du projet, il était impératif de découpé le projet. Je sais que certain on commencé par le \textit{jeu} en tant que telle, pour ma part j'avais peur de codé le jeu et de me retrouver bloqué au moment il aurait fallut l'implémenter dans des pages, avec des menu, etc. J'ai donc commencé par faire les page et le \textit{boite} qui sont inspiré de mon expérience avec le HTML. 
+Au vue de la taille du projet, il était impératif de découpé le projet. Je sais que certain on commencé par le \textit{jeu} en tant que telle, pour ma part j'avais peur de codé le jeu et de me retrouver bloqué au moment il aurait fallut l'implémenter dans des pages, avec des menu, etc. J'ai donc commencé par faire les pages et les \textit{boites} qui sont inspiré de mon expérience avec le HTML. 
 \subsection{Les pages et les boites}
 J'ai vu mon programme comme un site HTML, cf Figure \ref{fig1}, contenant un ensemble de pages, contenant elle même un ensemble de boites. Les boites avaient des dimensions et des position unique qu'elles transmettais à ce qu'elle contenaient. Imaginons que je fasse un menu que je mette dans la première page, et que je me rende compte qu'il est trop petit, je n'ai qu'à changer les dimensions de la boite qui contient le dit menu. 
 \begin{figure}[h!]
@@ -115,22 +115,10 @@ J'ai fais un diagramme UML qui ne contient que la partie affichage de mon progra
 \label{fig7}
 \end{figure}
 \subsection{les menus et les boutons}
-Les menus et les boutons sont des classes que j'ai pensé pour plus que pour une utilisation aussi simple que celle ci. En effet de la même manière que une page contient des boites, ici un menu contient des boutons. Il suffit de lier un menu à une boite pour que celle ci la contienne et l'affiche. Lorsque l'on instancie un menu il lui faut un nom le nombre de ligne et de colonne de bouton qu'il va contenir. Puis pour l'ajout d'un bouton, la méthode \textit{ajoutBouton} instancie un bouton de sorte qu'il soit de la bonne dimensions et que la position de celui ci en pixel par rapport au référentiel de processing soit bon. Il ne lui faut que le nom du bouton le type de bouton (Page, Popup, etc) et la position dans le menu. De plus un même menu peut être implémenter dans plusieurs boite en s'actualisant sur les dimensions de la boite qui le contient.
-%\begin{figure}[!h]
-%\begin{subfigure}{.45\textwidth}
-%  \centering
-%  \includegraphics[width=.9\linewidth]{8.PNG}
-%  \caption{Configuration du solveur}
-%  \label{fig6a}
-%\end{subfigure}
-%\begin{subfigure}{.55\textwidth}
-%  \centering
-%  \includegraphics[width=0.9\linewidth]{9.PNG}
-%  \caption{Option de la configuration pour avoir des résultat sans virgules}
-%  \label{fig6b}
-%\end{subfigure}
-%\caption{Le solveur}
-%\label{fig7}
-%\end{figure}
+Les menus et les boutons sont des classes que j'ai pensé pour une utilisation plus complexe que je ne le fais ici. En effet de la même manière que une page contient des boites, ici un menu contient des boutons. Il suffit de lier un menu à une boite pour que celle ci la contienne et l'affiche. Lorsque l'on instancie un menu il lui faut un nom le nombre de ligne et de colonne de bouton qu'il va contenir. Puis pour l'ajout d'un bouton, la méthode \textit{ajoutBouton} instancie un bouton de sorte qu'il soit de la bonne dimensions et que la position de celui ci en pixel par rapport au référentiel de processing soit bon. Il ne lui faut que le nom du bouton le type de bouton (Page, Popup, etc) et la position dans le menu. De plus un même menu peut être implémenter dans plusieurs boite en s'actualisant sur les dimensions de la boite qui le contient.
+\subsubsection{Le jeu}
+Le jeu est en fait une table de niveau générés depuis un fichier texte. Chaque niveau est vu comme un ensemble d'objet, comme les murs le début et la fin. Le personnage se déplace, librement et retourne au début quand il sort de l'espace de jeu. J'ai voulu que les différent objet parlent entre eux mais j'ai eu beaucoup de mal à le faire. J'ai donc centraliser toutes les "discussions" dans la class Level. J'ai penser faire une fonction qui prendrais en compte toutes les dimensions 
+
+
 
 \end{document}
